--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ header-img: "img/head-pic.jpg"
     <body>
         <!-- logo -->
         <div class="container">
-            <a href="#" id="users" data-toggle="tooltip" title="show or hide users"><img src="/about/logo.jpg"  id="logo" class="mx-auto d-block" alt="logo"></a>
+            <a href="#" id="users" data-toggle="tooltip" title="show or hide users"><img src="/aboutf/logo.jpg"  id="logo" class="mx-auto d-block" alt="logo"></a>
         </div>
 
         <!-- user table -->
