--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ layout: default
 description: keep hungry keep foolish
 header-img: "img/head-pic.jpg"
 ---
-<iframe src='about-ioan.html' width="350" height='800'></iframe>
+<iframe src='/about-ioan.html' width="350" height='800'></iframe>
