--- a/about.html
+++ b/about.html
@@ -2,6 +2,6 @@
 title: About
 layout: default
 description: keep hungry keep foolish
-header-img: "img/head-pic.jpg"
+header-img: "/img/head-pic.jpg"
 ---
 <iframe src='/about-ioan.html' width="350" height='800'></iframe>
