--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 🙊"
+description: "Sorry have not this page , please cheack your insert url and try it again"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
