--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 ---
 title: About
-layout: default
+layout: post
 description: keep hungry keep foolish
 header-img: "/img/head-pic.jpg"
 ---
+
+
 <iframe src='/about-ioan.html' width="350" height='800'></iframe>
