--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 title: About
 layout: post
-description: keep hungry keep foolish
+description:welcome join us
 header-img: "/img/head-pic.jpg"
 ---
 
